# test_task_Klin_Institute

./: .gitignore  Dockerfile  README.md  docker-compose.yml  import_template.xlsx  pyproject.toml
.github/workflows/: ci.yml  code-quality.yml  docker.yml
config/: settings.py  urls.py
workers/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
workers/migrations/: 0001_initial.py  0002_alter_worker_created_at_alter_worker_created_by_and_more.py  0003_alter_worker_created_by.py  0004_alter_worker_hired_date.py
